package human;

public interface People {
    String getName();
    void say(String text);
}
