package thing;

public record Food(String foodName, int price) {}
